<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/main_bg"
              android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/common_title_layout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_40">

        <ImageView
            android:id="@+id/icon_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/dp_10"
            android:src="@drawable/title_logo"/>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="@dimen/dp_80"
        android:paddingRight="@dimen/dp_80">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_disclaimer"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="left"
            android:text="@string/tip_disclaimer"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_14"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_10"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/tip_readed"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14"/>

            <TextView
                android:id="@+id/txt_protocal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/tip_protocal"
                android:textColor="@color/blue"
                android:textSize="@dimen/sp_14"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/tip_noremind"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_14"/>

            <CheckBox
                android:id="@+id/checkbox_remind"
                style="@style/protocal_checkbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_10"
                android:checked="true"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_5"
            android:background="@color/blue"
            android:paddingBottom="@dimen/dp_8"
            android:paddingTop="@dimen/dp_8"
            android:text="@string/tip_agree"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_16"/>

    </LinearLayout>
</LinearLayout>

