<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/tip_box">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/video_delete_alert"
        android:layout_marginTop="90dp"
        android:textColor="@color/black"
        android:textStyle="italic"
        android:textSize="@dimen/sp_20" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/ok_view"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_25"
            android:layout_weight="1"
            android:background="@color/color_ed6512"
            android:text="@string/ok"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18" />

        <Button
            android:id="@+id/cancel_view"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/dp_25"
            android:layout_weight="1"
            android:background="@color/color_ed6512"
            android:text="@string/cancel"
            android:paddingTop="5dp"
            android:paddingBottom="10dp"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_18" />
    </LinearLayout>

</LinearLayout>
