<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.dudu.aios.ui.activity.video.PhotoListActivity">

    <TextView
        android:id="@+id/tv_select"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="13dp"
        android:text="@string/action_choice"
        android:textColor="@android:color/white"
        android:textSize="18sp"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="4dp"
        android:background="@drawable/button_back_selector"
        android:onClick="onButtonBack"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_toRightOf="@+id/button_back"
        android:layout_marginLeft="1dp"
        android:layout_marginRight="75dp"
        android:layout_marginTop="9dp"
        android:layout_marginBottom="9dp">

        <GridView
            android:id="@+id/photo_gridView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:horizontalSpacing="7dp"
            android:numColumns="5"
            android:layout_marginTop="9dp"
            android:verticalSpacing="6dp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/photo_empty_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="80dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/photo_empty_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="7dp"
                android:text="@string/photo_empty_chinese" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="@string/photo_empty_english" />

        </LinearLayout>
    </RelativeLayout>



    <RelativeLayout
        android:id="@+id/delete_upload_container"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="4dp"
        android:layout_alignParentRight="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp"
            android:layout_marginRight="8dp">

            <ImageButton
                android:id="@+id/button_photo_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_photo_delete_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:layout_gravity="center_vertical"
                android:text="@string/action_delete"
                android:textSize="18sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="12dp"
            android:layout_marginRight="8dp"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/button_photo_upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_upload_photo_selector" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/action_upload"
                android:layout_gravity="center_vertical"
                android:textSize="18sp" />

        </LinearLayout>
    </RelativeLayout>
</RelativeLayout>
